package(default_visibility = ["//visibility:public"])

cc_library(
    name = "detail_hdrs",
    hdrs = [
        "include/coke/detail/awaiter_base.h",
        "include/coke/detail/basic_concept.h",
        "include/coke/detail/binary_indexed_tree.h",
        "include/coke/detail/condition_impl.h",
        "include/coke/detail/constant.h",
        "include/coke/detail/exception_config.h",
        "include/coke/detail/future_base.h",
        "include/coke/detail/go_task.h",
        "include/coke/detail/mutex_table.h",
        "include/coke/detail/random.h",
        "include/coke/detail/ref_counted.h",
        "include/coke/detail/series_task.h",
        "include/coke/detail/sleep_base.h",
        "include/coke/detail/task_impl.h",
        "include/coke/detail/timer_task.h",
        "include/coke/detail/wait_helper.h",
    ],
    includes = ["include"],
)

cc_library(
    name = "compatible_hdrs",
    hdrs = [
        "include/coke/compatible/to_numeric.h",
    ],
    includes = ["include"],
)

cc_library(
    name = "tools",
    hdrs = [
        "include/coke/tools/option_parser.h",
        "include/coke/tools/scope.h",
    ],
    includes = ["include"],
)

cc_library(
    name = "common",
    srcs = [
        "src/cancelable_timer.cpp",
        "src/coke_impl.cpp",
        "src/condition.cpp",
        "src/dag.cpp",
        "src/fileio.cpp",
        "src/go.cpp",
        "src/hashtable.cpp",
        "src/latch.cpp",
        "src/mutex.cpp",
        "src/qps_pool.cpp",
        "src/random.cpp",
        "src/rbtree.cpp",
        "src/sleep.cpp",
        "src/stop_token.cpp",
        "src/str_packer.cpp",
        "src/sync_guard.cpp",
    ],
    hdrs = [
        "include/coke/basic_awaiter.h",
        "include/coke/coke.h",
        "include/coke/condition.h",
        "include/coke/dag.h",
        "include/coke/deque.h",
        "include/coke/fileio.h",
        "include/coke/future.h",
        "include/coke/global.h",
        "include/coke/go.h",
        "include/coke/latch.h",
        "include/coke/lru_cache.h",
        "include/coke/make_task.h",
        "include/coke/mutex.h",
        "include/coke/qps_pool.h",
        "include/coke/queue_common.h",
        "include/coke/queue.h",
        "include/coke/rlru_cache.h",
        "include/coke/semaphore.h",
        "include/coke/series.h",
        "include/coke/shared_mutex.h",
        "include/coke/sleep.h",
        "include/coke/stop_token.h",
        "include/coke/sync_guard.h",
        "include/coke/task.h",
        "include/coke/wait_group.h",
        "include/coke/wait.h",

        "include/coke/utils/hashtable.h",
        "include/coke/utils/list.h",
        "include/coke/utils/rbtree.h",
        "include/coke/utils/str_holder.h",
        "include/coke/utils/str_packer.h",
    ],
    includes = ["include"],
    deps = [
        "//:detail_hdrs",
        "//:compatible_hdrs",
        "@workflow//:common",
    ]
)

cc_library(
    name = "nspolicy",
    srcs = [
        "src/nspolicy/nspolicy.cpp",
        "src/nspolicy/weighted_random_policy.cpp",
        "src/nspolicy/weighted_round_robin_policy.cpp",
        "src/nspolicy/weighted_least_conn_policy.cpp",
    ],
    hdrs = [
        "include/coke/nspolicy/address_info.h",
        "include/coke/nspolicy/nspolicy.h",
        "include/coke/nspolicy/weighted_least_conn_policy.h",
        "include/coke/nspolicy/weighted_policy_base_impl.h",
        "include/coke/nspolicy/weighted_policy_base.h",
        "include/coke/nspolicy/weighted_random_policy.h",
        "include/coke/nspolicy/weighted_round_robin_policy.h",
    ],
    includes = ["include"],
    deps = [
        "//:common",
    ],
)

cc_library(
    name = "net",
    srcs = [
        "src/net/client_conn_info.cpp",
    ],
    hdrs = [
        "include/coke/net/basic_server.h",
        "include/coke/net/client_conn_info.h",
        "include/coke/net/network.h",
    ],
    includes = ["include"],
    deps = [
        "//:common",
    ],
)

cc_library(
    name = "tlv",
    srcs = [
        "src/net/tlv_task.cpp",
        "src/net/tlv_client.cpp",
    ],
    hdrs = [
        "include/coke/tlv/basic_types.h",
        "include/coke/tlv/client.h",
        "include/coke/tlv/server.h",
        "include/coke/tlv/task.h",
    ],
    includes = ["include"],
    deps = [
        "//:net",
    ],
)

cc_library(
    name = "http",
    srcs = [
        "src/http_impl.cpp"
    ],
    hdrs = [
        "include/coke/http/http_client.h",
        "include/coke/http/http_server.h",
        "include/coke/http/http_utils.h",
    ],
    includes = ["include"],
    deps = [
        "//:net",
        "@workflow//:http",
    ],
)

cc_library(
    name = "redis",
    srcs = [
        "src/redis/client_task.cpp",
        "src/redis/client.cpp",
        "src/redis/cluster_client.cpp",
        "src/redis/message.cpp",
        "src/redis/parser.cpp",
        "src/redis/value.cpp",
    ],
    hdrs = [
        "include/coke/redis/basic_types.h",
        "include/coke/redis/client_impl.h",
        "include/coke/redis/client_task.h",
        "include/coke/redis/client.h",
        "include/coke/redis/cluster_client_impl.h",
        "include/coke/redis/cluster_client.h",
        "include/coke/redis/message.h",
        "include/coke/redis/options.h",
        "include/coke/redis/parser.h",
        "include/coke/redis/server.h",
        "include/coke/redis/value.h",

        "include/coke/redis/commands/bitmap.h",
        "include/coke/redis/commands/generic.h",
        "include/coke/redis/commands/hash.h",
        "include/coke/redis/commands/hyperloglog.h",
        "include/coke/redis/commands/list.h",
        "include/coke/redis/commands/publish.h",
        "include/coke/redis/commands/string.h",
        "include/coke/redis/commands/transaction.h",
    ],
    includes = ["include"],
    deps = [
        "//:net",
    ],
)

cc_library(
    name = "mysql",
    srcs = [
        "src/mysql_impl.cpp"
    ],
    hdrs = [
        "include/coke/mysql/mysql_client.h",
        "include/coke/mysql/mysql_utils.h",
    ],
    includes = ["include"],
    deps = [
        "//:net",
        "@workflow//:mysql",
    ],
)
