module(
    name = "coke",
    version = "0.5.0"
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")

git_repository = use_repo_rule('@bazel_tools//tools/build_defs/repo:git.bzl',
                               'git_repository')

git_repository(
    name = "workflow",
    remote = "https://github.com/sogou/workflow.git",
    tag = "v0.11.11",
)
